--- a/Monon_Sarkar_Pujon - class_1practice.ipynb
+++ b/Monon_Sarkar_Pujon - class_1practice.ipynb
@@ -212,13 +212,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "_tHsmEHzt2nX"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "30\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write your code here"
+        "n=int(input(\"Enter the term of n: \"))\n",
+        "sum= 0\n",
+        "for number in range(1,n+1):\n",
+        "    sum= sum+number**2\n",
+        "\n",
+        "print(sum)\n"
       ]
     },
     {
@@ -232,13 +245,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "go4_kmZmyVSx"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "12\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write your code here"
+        "number1=(int(input(\"Enter the first number: \")))\n",
+        "number2=(int(input(\"Enter the second number: \")))\n",
+        "n=(int(input(\"Enter the term of Nth: \")))\n",
+        "difference= number2-number1\n",
+        "nth_term= number1\n",
+        "for number in range(number1,n+1):\n",
+        "    nth_term=nth_term+difference\n",
+        "\n",
+        "print(nth_term)\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -252,13 +283,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "X05xqFS1yW16"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2  /  4  +  3  /  5  =  22  /  20\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write your code here"
+        "numerator1=int(input(\"Enter the value of numerator1:\"))\n",
+        "denominator1=int(input(\"Enter the value of denominator1:\"))\n",
+        "numerator2=int(input(\"Enter the value of numerator2:\"))\n",
+        "denominator2=int(input(\"Enter the value of denominator2:\"))\n",
+        "\n",
+        "denominator3= denominator1*denominator2\n",
+        "numerator3= (denominator3//denominator1)*numerator1 + (denominator3//denominator2)*numerator2\n",
+        "\n",
+        "print(numerator1, \" / \", denominator1,\" + \", numerator2, \" / \", denominator2, \" = \", numerator3, \" / \", denominator3,)"
       ]
     },
     {
@@ -281,13 +328,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "FePZqno74eWv"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "848.0\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write your code here"
+        "H=int(input(\"Enter the height: \" ))\n",
+        "L=int(input(\"Enter the Length: \" ))\n",
+        "B=int(input(\"Enter the breadth: \" ))\n",
+        "glass_h=int(input(\"Enter the height of glass: \"))\n",
+        "glass_r=int(input(\"Enter the radius of glass: \"))\n",
+        "tank= H*L*B\n",
+        "glass_volume= 3.1416*glass_r**2*glass_h\n",
+        "Glass_required= (tank//glass_volume)\n",
+        "\n",
+        "print(Glass_required)\n",
+        "\n"
       ]
     }
   ],
